--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
